--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+
+
+
+<!-- Command to run server  -->
+// npm run dev
